// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TagThemes /> should render correctly 1`] = `
<Tag
  size="15px"
>
  <IconRounded
    color="#707070"
    size={18}
  >
    <Icon
      color="#fff"
      name="folder"
      size={10}
    />
  </IconRounded>
  <span>
    Justice
     
  </span>
  <FormattedMessage
    id="et"
    values={Object {}}
  />
  <span>
     
    Éducation
  </span>
</Tag>
`;

exports[`<TagThemes /> should render correctly with other size 1`] = `
<Tag
  size="12px"
>
  <IconRounded
    color="#707070"
    size={18}
  >
    <Icon
      color="#fff"
      name="folder"
      size={10}
    />
  </IconRounded>
  <span>
    Justice
     
  </span>
  <FormattedMessage
    id="et"
    values={Object {}}
  />
  <span>
     
    Éducation
  </span>
</Tag>
`;
